--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webstudio</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 
 <body>
     <header>
 
         <nav>
-            <a href="/">Webstudio</a>
+            <a class="logo" href="/">Webstudio</a>
             <ul>
                 <li><a href="">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
