--- a/index.html
+++ b/index.html
@@ -10,23 +10,22 @@
 </head>
 
 
-<body>
-    <header>
+<body class="body">
+    <header class="header">
 
         <nav>
-            <a class="logo" href="/">Webstudio</a>
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакт</a></li>
+            <a class="logo" href="/">Web<span class="Studio">Studio</span></a>
+            <ul class="site-nav list">
+                <li><a href="" class="link">Студия</a></li>
+                <li><a href="" class="link">Портфолио</a></li>
+                <li><a href="" class="link">Контакт</a></li>
             </ul>
-        </nav>
-
+    </nav>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
 
-    <main>
+    <main class="main">
 
         <section>
             <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br />ДЛЯ ВАШЕГО БИЗНЕСА</h1>
@@ -87,7 +86,7 @@
     </main>
 
     <footer>
-        <a href="/">Webstudio</a>
+        <a class="logo" href="/">Web<span class="Studio">Studio</span></a>
         <address>
             <p>г. Киев, пр-т Леси Украинки, 26</p>
             <ul>
