--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webstudio</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 </head>
 
 
@@ -30,48 +33,48 @@
             <nav>
             
                 <ul class="">
-                    <li><a href="" class="link">Все</a></li>
-                    <li><a href="" class="link">Веб-сайты</a></li>
-                    <li><a href="" class="link">Приложения</a></li>
-                    <li><a href="" class="link">Дизайн</a></li>
-                    <li><a href="" class="link">Маркетинг</a></li>
+                    <li><button type="button">Все</button></li>
+                    <li><button type="button">Веб-сайты</button></li>
+                    <li><button type="button">Приложения</button></li>
+                    <li><button type="button">Дизайн</button></li>
+                    <li><button type="button">Маркетинг</button></li>
                 </ul>
         </nav>
         <ul>
             <li><img src="./images/pr1.jpg" alt="фото pr1" width="370">
-                <h3>Технокряк</h3>
+                <h2>Технокряк</h2>
                 <p>Веб-сайт</p>
             </li>
             <li><img src="./images/pr2.jpg" alt="фото pr2" width="370">
-                <h3>Постер New Orlean vs Golden Star</h3>
+                <h2>Постер New Orlean vs Golden Star</h2>
                 <p>Дизайн</p>
             </li>
             <li><img src="./images/pr3.jpg" alt="фото pr3" width="370">
-                <h3>Ресторан Seafood</h3>
+                <h2>Ресторан Seafood</h2>
                 <p>Приложение</p>
             </li>
             <li><img src="./images/pr4.jpg" alt="фото pr4" width="370">
-                <h3>Проект Prime</h3>
+                <h2>Проект Prime</h2>
                 <p>Маркетинг</p>
             </li>
             <li><img src="./images/pr5.jpg" alt="фото pr5" width="370">
-                <h3>Проект Boxes</h3>
+                <h2>Проект Boxes</h2>
                 <p>Приложение</p>
             </li>
             <li><img src="./images/pr6.jpg" alt="фото pr6" width="370">
-                <h3>Inspiration has no Borders</h3>
+                <h2>Inspiration has no Borders</h2>
                 <p>Веб-сайт</p>
             </li>
             <li><img src="./images/pr7.jpg" alt="фото pr7" width="370">
-                <h3>Издание Limited Edition</h3>
+                <h2>Издание Limited Edition</h2>
                 <p>Дизайн</p>
             </li>
             <li><img src="./images/pr8.jpg" alt="фото pr8" width="370">
-                <h3>Проект LAB</h3>
+                <h2>Проект LAB</h2>
                 <p>Маркетинг</p>
             </li>
             <li><img src="./images/pr9.jpg" alt="фото pr9" width="370">
-                <h3>Growing Business</h3>
+                <h2>Growing Business</h2>
                 <p>Приложение</p>
             </li>
         </ul>
